+opencv and tesseract as git submodules and cmake sub projects.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "cpp-properties"]
 	path = cpp-properties
 	url = https://github.com/fredyw/cpp-properties
+[submodule "tesseract"]
+	path = tesseract
+	url = https://github.com/tesseract-ocr/tesseract
+[submodule "opencv"]
+	path = opencv
+	url = https://github.com/opencv/opencv
+[submodule "WiringPi"]
+	path = WiringPi
+	url = https://github.com/WiringPi/WiringPi
