--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 set(CMAKE_CXX_FLAGS  "-O3")
 
+set(WITH_OPENEXR  "OFF")
+
 add_subdirectory(cpp-properties)
 add_subdirectory(opencv)
 add_subdirectory(tesseract)
